--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -4,3 +4,4 @@ client_secret="WcI1oZAEXbeiv4lSi1EkdiJpurUs9Bqb"
 
 email_domains="example.com"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
+cookie_secure="false"
