--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,19 +8,22 @@ volumes:
   keycloak_postgres_volume:
 
 services:
-  oauth2-proxy:
+  oauth2proxy:
     container_name:
-      oauth2-proxy
+      oauth2proxy
     image:
       quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+    env_file:
+      oauth2proxy/.env
     volumes:
-      - ./oauth2_proxy/oauth2_proxy.cfg:/oauth2-proxy.cfg
+      - ./oauth2proxy/oauth2proxy.cfg:/oauth2proxy.cfg
     command:
-      --config /oauth2-proxy.cfg
+      --config /oauth2proxy.cfg
     networks:
       - localnet
     ports:
       - "4180:4180"
+    
     # hostname:
     #   oauth2-proxy.kek.me
     # depends_on:
@@ -59,6 +62,8 @@ services:
       - localnet
     ports:
       - "8081:8080"
+    hostname: 
+      keycloak.localtest.me
     depends_on:
       keycloak_postgres:
         condition: service_healthy
