--- a/backend/keycloak/.env
+++ b/backend/keycloak/.env
@@ -8,3 +8,4 @@ KEYCLOAK_ADMIN="admin"
 KEYCLOAK_ADMIN_PASSWORD="admin"
 KC_HEALTH_ENABLED="true"
 KC_METRICS_ENABLED="true"
+HOSTNAME="keycloak.localtest.me"
