--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -62,11 +62,15 @@ services:
       - localnet
     ports:
       - "8081:8080"
-    hostname: 
-      keycloak.localtest.me
     depends_on:
       keycloak_postgres:
         condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/realms/master"]
+      start_period: 10s
+      interval: 30s
+      retries: 3
+      timeout: 5s
 
   keycloak_postgres:
     container_name:
@@ -84,15 +88,8 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: "exit 0"
-
-  # httpbin:
-  #   container_name: httpbin
-  #   image: 
-  #     kennethreitz/httpbin
-  #   networks:
-  #     - localnet
-  #   ports:
-  #     - "8080:80"
-  #   # hostname:
-  #   #   httpbin.kek.me
+      test: pg_isready -d postgres
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
