--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,6 +1,8 @@
-redirect_url="http://kek.kek.kek"
+http_address="0.0.0.0:4180"
+redirect_url="http://localhost:4180/oauth2/callback"
+
 client_id="offline-project-client"
-client_secret="o1unb0a9qS88AzjAfoBEJTFaJCyiEbBJ"
+client_secret="nXOOVJ7Knwnbdpvd2jk6xaloBJC94RAf"
 
 email_domains="example.com"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
