--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       keycloak_postgres:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/realms/master"]
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8080/realms/offline-project"]
       start_period: 10s
       interval: 30s
       retries: 3
