--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -23,12 +23,12 @@ services:
       - localnet
     ports:
       - "4180:4180"
-    
+    depends_on:
+      keycloak:
+        condition: service_healthy    
     # hostname:
     #   oauth2-proxy.kek.me
-    # depends_on:
-    #   keycloak:
-    #     condition: service_healthy
+
 
   # nginx:
   #   container_name:
