--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,9 +1,15 @@
 http_address="0.0.0.0:4180"
 redirect_url="http://localhost:4180/oauth2/callback"
 
+upstreams="http://localhost:8080"
+
 client_id="offline-project-client"
 client_secret="nXOOVJ7Knwnbdpvd2jk6xaloBJC94RAf"
 
 email_domains="example.com"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
 cookie_secure="false"
+
+oidc_issuer_url="http://localhost:8081/auth/realms/offline-project"
+provider="oidc"
+provider_display_name="Keycloak"
