--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,15 +1,9 @@
 http_address="0.0.0.0:4180"
-redirect_url="http://localhost:4180/oauth2/callback"
-
-upstreams="http://localhost:8080"
-
+upstreams="http://localhost:80"
+provider="keycloak-oidc"
 client_id="offline-project-client"
-client_secret="dN1aN80ClSs04HfAwL7KtjxQD4gyiPOs"
-
-email_domains="example.com"
-cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
-cookie_secure="false"
-
-oidc_issuer_url="http://localhost:8081/realms/offline-project"
-provider="oidc"
-provider_display_name="Keycloak"
+client_secret="odGU8aGo7LJNaZQQ2ckOP0QAj9fK6En6"
+redirect_url="http://localhost:4180/oauth2/callback"
+oidc_issuer_url="http://localhost:4180/realms/offline-project"
+email_domain="example.com"
+code_challenge_method="S256"
