--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 
 networks:
-  localnet:
+  keycloak-net:
+    driver: bridge
+  oauth2proxy-net:
     driver: bridge
 
 volumes:
@@ -20,12 +22,12 @@ services:
     command:
       --config /oauth2proxy.cfg
     networks:
-      - localnet
+      - oauth2proxy-net
     ports:
       - "4180:4180"
-    # depends_on:
-    #   keycloak:
-    #     condition: service_healthy
+    depends_on:
+      keycloak:
+        condition: service_healthy
 
   # nginx:
   #   container_name:
@@ -37,7 +39,7 @@ services:
   #     - ./nginx/certs/localhost/localhost.crt:/etc/nginx/ssl/localhost/localhost.crt
   #     - ./nginx/certs/localhost/localhost.key:/etc/nginx/ssl/localhost/localhost.key
   #   networks:
-  #     - localnet
+  #     - keycloaknet
   #   ports:
   #     - "80:80"
   #     - "443:443"
@@ -54,14 +56,17 @@ services:
     volumes:
       - ./keycloak/realm:/opt/keycloak/data/import
     networks:
-      - localnet
+      - keycloak-net
+      - oauth2proxy-net
     ports:
       - "8081:8080"
+    hostname: 
+      keycloak
     depends_on:
       keycloak_postgres:
         condition: service_healthy
     healthcheck:
-      test: curl --head -fsS http://localhost:8081/health/live
+      test: curl --head -fsS http://localhost:8080/health/live
       interval: 10s
       timeout: 5s
       retries: 10
@@ -79,7 +84,7 @@ services:
     env_file:
       keycloak_postgres/.env
     networks:
-      - localnet
+      - keycloak-net
     ports:
       - "5432:5432"
     healthcheck:
