--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -2,8 +2,9 @@ http_address="0.0.0.0:4180"
 upstreams="http://localhost:80"
 provider="keycloak-oidc"
 client_id="offline-project-client"
-client_secret="odGU8aGo7LJNaZQQ2ckOP0QAj9fK6En6"
-redirect_url="http://localhost:4180/oauth2/callback"
-oidc_issuer_url="http://localhost:4180/realms/offline-project"
-email_domain="example.com"
+client_secret="dgkkSk84mTg8l00MgEqraA8H24KRZJrv"
+redirect_url="http://keycloak:8080/oauth2/callback"
+oidc_issuer_url="http://keycloak:8080/realms/offline-project"
+email_domains="example.com"
 code_challenge_method="S256"
+cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
