--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -20,9 +20,12 @@ services:
     command:
       --config /oauth2proxy.cfg
     networks:
-      - localnet
+      localnet: {}
     ports:
       - "4180:4180"
+    depends_on:
+      keycloak:
+        condition: service_healthy
 
   # nginx:
   #   container_name:
@@ -45,7 +48,7 @@ services:
     image:
       nginx:1.23.3-alpine
     networks:
-      - localnet
+      localnet: {}
     ports:
       - "81:80"
 
@@ -61,7 +64,9 @@ services:
     volumes:
       - ./keycloak/realm:/opt/keycloak/data/import
     networks:
-      - localnet
+      localnet:
+        aliases:
+          - keycloak.localtest.me
     ports:
       - "8080:8080"
     depends_on:
@@ -70,11 +75,10 @@ services:
     hostname: 
       keycloak
     healthcheck:
-      test: curl http://localhost:8080/health/live
-      # test: ["CMD", "curl", "--head", "-fsS", "http://keycloak:8080/health"]
+      test: curl http://keycloak.localtest.me:8080/health/live
       interval: 10s
       timeout: 5s
-      retries: 10
+      retries: 3
       start_period: 5s
 
   keycloak_postgres:
@@ -89,7 +93,7 @@ services:
     env_file:
       keycloak_postgres/.env
     networks:
-      - localnet
+      localnet: {}
     ports:
       - "5432:5432"
     healthcheck:
