--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,10 +1,10 @@
 http_address="0.0.0.0:4180"
-upstreams="http://localhost:80"
+upstreams="http://localhost:81"
 provider="keycloak-oidc"
 client_id="offline-project-client"
-client_secret="dgkkSk84mTg8l00MgEqraA8H24KRZJrv"
-redirect_url="http://keycloak:8080/oauth2/callback"
-oidc_issuer_url="http://keycloak:8080/realms/offline-project"
+client_secret="gYnT5rl4P8qHYKWdZGT2RYbmkGaonE0f"
+redirect_url="http://keycloak.localtest.me:8080/oauth2/callback"
+oidc_issuer_url="http://keycloak.localtest.me:8080/realms/offline-project"
 email_domains="example.com"
 code_challenge_method="S256"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
