--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,25 +8,6 @@ volumes:
   keycloak_postgres_volume:
 
 services:
-  oauth2proxy:
-    container_name:
-      oauth2proxy
-    image:
-      quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
-    env_file:
-      oauth2proxy/.env
-    volumes:
-      - ./oauth2proxy/oauth2proxy.cfg:/oauth2proxy.cfg
-    command:
-      --config /oauth2proxy.cfg
-    networks:
-      localnet: {}
-    ports:
-      - "4180:4180"
-    depends_on:
-      keycloak:
-        condition: service_healthy
-
   # nginx:
   #   container_name:
   #     nginx
@@ -52,6 +33,28 @@ services:
     ports:
       - "81:80"
 
+  oauth2proxy:
+    container_name:
+      oauth2proxy
+    image:
+      quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+    env_file:
+      oauth2proxy/.env
+    volumes:
+      - ./oauth2proxy/oauth2proxy.cfg:/oauth2proxy.cfg
+    command:
+      --config /oauth2proxy.cfg
+    networks:
+      localnet:         
+        aliases:
+          - oauth2proxy.localtest.me
+    ports:
+      - "4180:4180"
+    hostname:
+      oauth2proxy
+    depends_on:
+      - keycloak
+      
   keycloak:
     container_name:
       keycloak
