--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -2,8 +2,8 @@ http_address="0.0.0.0:4180"
 upstreams="http://localhost:81"
 provider="keycloak-oidc"
 client_id="offline-project-client"
-client_secret="gYnT5rl4P8qHYKWdZGT2RYbmkGaonE0f"
-redirect_url="http://keycloak.localtest.me:8080/oauth2/callback"
+client_secret="dFBtARJjjzhCpJsqLbDE0eUJD6Gv2LbM"
+redirect_url="http://oauth2proxy.localtest.me:4180/oauth2/callback"
 oidc_issuer_url="http://keycloak.localtest.me:8080/realms/offline-project"
 email_domains="example.com"
 code_challenge_method="S256"
