--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -7,4 +7,5 @@ redirect_url="http://oauth2proxy.localtest.me:4180/oauth2/callback"
 oidc_issuer_url="http://keycloak.localtest.me:8080/realms/offline-project"
 email_domains="example.com"
 code_challenge_method="S256"
-cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
+cookie_secure="false"
+cookie_secret="3MFNeZCzco-U-2-nNJNlUWB8VTzDhSoyH5KYDjjp2L8="
