--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,11 +1,17 @@
 http_address="0.0.0.0:4180"
 upstreams="http://localhost:81"
+
 provider="keycloak-oidc"
+
 client_id="offline-project-client"
 client_secret="pUa7KQaMmxBHLoKUxjOWCB1RPEyDqFSk"
+
 redirect_url="http://oauth2proxy.localtest.me:4180/oauth2/callback"
 oidc_issuer_url="http://keycloak.localtest.me:8080/realms/offline-project-realm"
-email_domains="example.com"
+
+email_domains="*"
+
 code_challenge_method="S256"
+
 cookie_secure="false"
 cookie_secret="3MFNeZCzco-U-2-nNJNlUWB8VTzDhSoyH5KYDjjp2L8="
