--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -4,12 +4,12 @@ upstreams="http://localhost:81"
 provider="keycloak-oidc"
 
 client_id="offline-project-client"
-client_secret="0jA05qCeIjktzTLuxFtGSucobNlA7CXQ"
+client_secret="3Sl0u3HnYomkH6eybVT9Hh9Kxc8SPBxl"
 
 redirect_url="http://oauth2proxy.localtest.me:4180/oauth2/callback"
 oidc_issuer_url="http://keycloak.localtest.me:8080/realms/offline-project-realm"
 
-email_domains="*"
+email_domains="example.com"
 
 code_challenge_method="S256"
 
