--- a/backend/oauth2proxy/oauth2proxy.cfg
+++ b/backend/oauth2proxy/oauth2proxy.cfg
@@ -1,5 +1,5 @@
 http_address="0.0.0.0:4180"
-upstreams="http://localhost:81"
+upstreams="http://upstream.localtest.me:81"
 
 provider="keycloak-oidc"
 
