--- a/backend/nginx/simple.conf
+++ b/backend/nginx/simple.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         listen [::]:80;
 
-        location = /health {
+        location = / {
             access_log off;
             add_header 'Content-Type' 'application/json';
             return 200 '{"status":"UP"}';
