--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -7,19 +7,32 @@ http {
         listen 80;
         listen [::]:80;
 
-        server_name _;
+        location = / {
+            proxy_pass http://oauth2proxy.localtest.me:4180;
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-        return 301 https://$host$request_uri;
-    }
+        location = /auth {
+            proxy_pass http://oauth2proxy.localtest.me:4180;
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Scheme $scheme;
+            # proxy_set_header X-Auth-Request-Redirect $scheme://$host/backend;
+            # proxy_pass_request_body off;
+            # proxy_set_header Content-Length "";
+        }
 
-    server {
-        listen              443 ssl;
-        listen              [::]:443 ssl;
+        error_page 401 = @error401;
+        location @error401 {
+            return 200 "auth fails";
+        }
 
-        ssl_certificate     /etc/nginx/ssl/localhost/localhost.crt;
-        ssl_certificate_key /etc/nginx/ssl/localhost/localhost.key;
-        ssl_protocols       TLSv1.2 TLSv1.1 TLSv1;
-
-        return 200 'kek';
+        location = /backend {
+            return 200 "secured";
+        }
     }
 }
+
