--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -7,8 +7,8 @@ http {
         listen 80;
         listen [::]:80;
 
-        location = / {
-            return 200 "service";
+        location = /chats {
+            return 200 "chats";
         }
     }
 }
