--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -5,10 +5,17 @@ events {
 http {
     server {
         listen 80;
-        listen [::]:80;
+        
+        location = / {
+            return 200 "home";
+        }
 
         location = /chats {
-            return 200 "chats";
+            proxy_pass http://chats:81/chats;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
