--- a/backend/chats/chats.conf
+++ b/backend/chats/chats.conf
@@ -6,6 +6,10 @@ http {
     server {
         listen 81;
         
+        location = / {
+            return 200 "chats_root";
+        }
+
         location = /chats {
             return 200 "chats";
         }
