--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -10,12 +10,12 @@ http {
             return 200 "home";
         }
 
+        location = /chats_root {
+            proxy_pass http://chats:81/;
+        }
+        
         location = /chats {
             proxy_pass http://chats:81/chats;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
