--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -11,7 +11,7 @@ http {
         }
 
         location = /chats {
-            proxy_pass http://chats:80/;
+            proxy_pass http://chats_service:80/;
         }
     }
 }
