--- a/backend/chats_service/Dockerfile
+++ b/backend/chats_service/Dockerfile
@@ -1,6 +1,14 @@
 FROM golang:1.22
 
-COPY . .
+
+ADD . /home
+
+WORKDIR /home
+
+CMD ["go","run","cmd/main.go"]
+
+# RUN go build cmd/
+# RUN ./cmd/main
 
 # Debugger
-RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
+# RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
