--- a/backend/chats_service/Dockerfile
+++ b/backend/chats_service/Dockerfile
@@ -17,13 +17,13 @@ FROM golang:1.22
 WORKDIR /app
 
 # Copy go mod and sum files
-COPY chats_service/go.mod ./
+COPY go.mod ./
 
 # Download all dependencies. Dependencies will be cached if the go.mod and go.sum files are not changed
 RUN go mod download
 
 # Copy the source code from the current directory to the Working Directory inside the container
-COPY chats_service/cmd ./cmd
+COPY cmd ./cmd
 
 # Build the Go app
 RUN go build -o main ./cmd
