--- a/backend/chats_service/Dockerfile
+++ b/backend/chats_service/Dockerfile
@@ -2,12 +2,20 @@ FROM golang:1.22
 
 WORKDIR /app
 
-COPY chats_service/go.mod ./
+# For docker-compose
+# COPY chats_service/go.mod ./
+# For dockerfile
+COPY go.mod ./
 
 RUN go mod download
 RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
+RUN go get github.com/gorilla/websocket
 
-COPY chats_service/cmd ./cmd
+# For docker-compose
+# COPY chats_service/cmd ./cmd
+# For dockerfile
+COPY cmd ./cmd
+
 RUN go build -o main ./cmd
 
 EXPOSE 80
