for go packages adding

--- a/backend/chats_service/Dockerfile
+++ b/backend/chats_service/Dockerfile
@@ -2,19 +2,13 @@ FROM golang:1.22
 
 WORKDIR /app
 
-# For docker-compose
-# COPY chats_service/go.mod ./
-# For dockerfile
-COPY go.mod ./
+COPY chats_service/go.mod ./
 
 RUN go mod download
 RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
 RUN go get github.com/gorilla/websocket
 
-# For docker-compose
-# COPY chats_service/cmd ./cmd
-# For dockerfile
-COPY cmd ./cmd
+COPY chats_service/cmd ./cmd
 
 RUN go build -o main ./cmd
 
