--- a/backend/chats_service/Dockerfile
+++ b/backend/chats_service/Dockerfile
@@ -7,8 +7,11 @@ COPY chats_service/go.mod ./
 RUN go mod download
 RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
 RUN go get github.com/gorilla/websocket
+RUN go get github.com/sirupsen/logrus
 
 COPY chats_service/cmd ./cmd
+
+RUN go get chats_service/cmd
 
 RUN go build -o main ./cmd
 
