--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -23,6 +23,9 @@ services:
     build:
       context: .
       dockerfile: chats_service/Dockerfile
+    environment:
+      - ENTRYPOINT_ADDRESS=
+      - ENTRYPOINT_PORT=80
     networks:
       - chats_network
     ports:
