--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -12,6 +12,9 @@ http {
 
         location = /chats {
             proxy_pass http://chats_service:80/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
