--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,8 +1,11 @@
 version: '3'
 name: offline_project
 
+volumes:
+  keycloak_postgres_volume:
+
 networks:
-  chats_network:
+  local_network:
     driver: bridge
 
 services:
@@ -12,14 +15,68 @@ services:
     volumes:
       - ./gateway/gateway.conf:/etc/nginx/nginx.conf
     networks:
-      chats_network:         
+      local_network:         
         aliases:
           - gateway.localtest.me
     ports:
-      - "8080:80"
+      - "80:80"
 
-  gatekeeper:
-    image: quay.io/gogatekeeper/gatekeeper:1.1.0
+  oauth2proxy:
+    container_name: oauth2proxy
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+    env_file: oauth2proxy/.env
+    volumes:
+      - ./oauth2proxy/oauth2proxy.cfg:/oauth2proxy.cfg
+    command: --config /oauth2proxy.cfg
+    networks:
+      local_network:         
+        aliases:
+          - oauth2proxy.localtest.me
+    ports:
+      - "4180:4180"
+    depends_on:
+      - keycloak
+
+  keycloak:
+    container_name: keycloak
+    image: keycloak/keycloak
+    command: start-dev --import-realm
+    env_file: keycloak/.env
+    volumes:
+      - ./keycloak/realm:/opt/keycloak/data/import
+    networks:
+      local_network:
+        aliases:
+          - keycloak.localtest.me
+    ports:
+      - "8080:8080"
+    depends_on:
+      keycloak_postgres:
+        condition: service_healthy 
+    healthcheck:
+      test: curl http://keycloak.localtest.me:8080/health/live
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+
+  keycloak_postgres:
+    container_name: keycloak_postgres
+    image: postgres:14.10-bullseye
+    command: postgres -c 'max_connections=200'
+    volumes:
+      - keycloak_postgres_volume:/var/lib/postgresql/data
+    env_file: keycloak_postgres/.env
+    networks: 
+      - local_network
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: pg_isready -d postgres
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
   chats_service:
     container_name: chats_service
@@ -30,6 +87,6 @@ services:
       - ENTRYPOINT_ADDRESS=
       - ENTRYPOINT_PORT=80
     networks:
-      - chats_network
+      - local_network
     ports:
-      - "80:80"
+      - "81:80"
