--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -11,10 +11,14 @@ http {
         }
 
         location = /chats {
-            proxy_pass http://chats_service:80/;
+            proxy_pass http://chats_service:81/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+        }
+
+        location = /backend {
+            return 200 "secured";
         }
     }
 }
