gateway works correct

--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -7,19 +7,38 @@ http {
         listen 80;
         
         location = / {
-            return 200 "home";
+            return 200 "gateway";
         }
 
-        location = /chats {
-            proxy_pass http://chats_service:81/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
+        location = /gateway2 {
+            proxy_pass http://gateway2:80/;
         }
 
-        location = /backend {
-            return 200 "secured";
+        location = /gateway3 {
+            proxy_pass http://gateway3:80/;
         }
+
+        # location = / {
+        #     auth_request /auth;
+
+        #     return 200 "home";
+        # }
+
+        # location = /chats {
+        #     proxy_pass http://chats_service:81/;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection "upgrade";
+        # }
+
+        # location = /auth {
+        #     internal;
+        #     proxy_pass /auth_service;
+        #     proxy_pass_request_body off;
+        #     proxy_set_header Content-Length "";
+        # }
+
+
     }
 }
 
