--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,6 +21,26 @@ services:
     ports:
       - "80:80"
 
+  gateway2:
+    container_name: gateway2
+    image: nginx:1.23.3-alpine
+    volumes:
+      - ./gateway/gateway2.conf:/etc/nginx/nginx.conf
+    networks:
+      - local_network
+
+  gateway3:
+    container_name: gateway3
+    image: nginx:1.23.3-alpine
+    volumes:
+      - ./gateway/gateway3.conf:/etc/nginx/nginx.conf
+    networks:
+      - local_network
+
+
+
+
+
   # oauth2proxy:
   #   container_name: oauth2proxy
   #   image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
@@ -78,15 +98,14 @@ services:
   #     retries: 3
   #     start_period: 5s
 
-  chats_service:
-    container_name: chats_service
-    build:
-      context: .
-      dockerfile: chats_service/Dockerfile
-    environment:
-      - ENTRYPOINT_ADDRESS=
-      - ENTRYPOINT_PORT=80
-    networks:
-      - local_network
-    ports:
-      - "81:80"
+  # chats_service:
+  #   container_name: chats_service
+  #   build:
+  #     context: .
+  #     dockerfile: chats_service/Dockerfile
+  #   environment:
+  #     - ENTRYPOINT_ADDRESS=
+  #     - ENTRYPOINT_PORT=80
+  #   networks:
+  #     - local_network
+
