--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -6,6 +6,9 @@ http {
     server {
         listen 80;
         
+        access_log /var/log/nginx/general_access.log;
+        error_log /var/log/nginx/general_error.log;
+
         location = / {
             return 200 "gateway";
         }
