--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -9,8 +9,8 @@ http {
         access_log /var/log/nginx/general_access.log;
         error_log /var/log/nginx/general_error.log;
 
-        location = / {
-            return 200 "gateway";
+        location = /chats {
+            return 200 "chats";
         }
     }
 }
