--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
   keycloak_postgres_volume:
 
 networks:
-  local_network:
+  gateway_network:
     driver: bridge
 
 services:
@@ -15,9 +15,16 @@ services:
     volumes:
       - ./gateway/gateway.conf:/etc/nginx/nginx.conf
     networks:
-      local_network:         
+      gateway_network:         
         aliases:
           - gateway.localtest.me
     ports:
       - "80:80"
 
+  service_chats:
+    container_name: service_chats
+    build:
+      context: .
+      dockerfile: service_chats/Dockerfile
+    networks:
+      - gateway_network
