--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -10,7 +10,7 @@ http {
         error_log /var/log/nginx/general_error.log;
 
         location = /chats {
-            return 200 "chats";
+            proxy_pass http://service_chats:80/;
         }
     }
 }
