--- a/backend/service_chats/Dockerfile
+++ b/backend/service_chats/Dockerfile
@@ -2,16 +2,16 @@ FROM golang:1.22
 
 WORKDIR /app
 
-COPY chats_service/go.mod ./
+COPY service_chats/go.mod ./
 
 RUN go mod download
 RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
 RUN go get github.com/gorilla/websocket
 RUN go get github.com/sirupsen/logrus
 
-COPY chats_service/cmd ./cmd
+COPY service_chats/cmd ./cmd
 
-RUN go get chats_service/cmd
+RUN go get service_chats/cmd
 
 RUN go build -o main ./cmd
 
