--- a/backend/service_chats/Dockerfile
+++ b/backend/service_chats/Dockerfile
@@ -2,12 +2,12 @@ FROM golang:1.22
 
 WORKDIR /app
 
-COPY chats_service/go.mod ./
+COPY service_chats/go.mod ./
 
 RUN go mod download
 RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
 
-COPY chats_service/cmd ./cmd
+COPY service_chats/cmd ./cmd
 RUN go build -o main ./cmd
 
 EXPOSE 80
