--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,6 +17,8 @@ services:
           - gateway.localtest.me
     ports:
       - "80:80"
+    depends_on:
+      - service_chats
 
   service_chats:
     container_name: service_chats
