--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -11,6 +11,9 @@ http {
 
         location = /chats {
             proxy_pass http://service_chats:80/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
         }
     }
 }
