--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -9,15 +9,15 @@ http {
         access_log /var/log/nginx/general_access.log;
         error_log /var/log/nginx/general_error.log;
 
-        # location = /chats {
-        #     proxy_pass http://service_chats:80/;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection "upgrade";
-        # }
+        location = /messenger {
+            proxy_pass http://service_messenger:80/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
 
         location = /test{
-            return 200 "test"
+            return 200 "test";
         }
     }
 }
