--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -17,7 +17,7 @@ http {
         }
 
         location = /test{
-            return 200 "test";
+            return 200 "test1";
         }
     }
 }
