--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -4,25 +4,14 @@ events {
 
 http {
     server {
-        listen 80;
-        
-        access_log /var/log/nginx/general_access.log;
-        error_log /var/log/nginx/general_error.log;
+        server_name test.offline_project.com;
 
-        location = /messenger {
-            proxy_pass http://service_messenger:80/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-
-            proxy_set_header    X-Forwarded-For $remote_addr;
-            proxy_set_header    Host $http_host;
-            proxy_set_header    Upgrade websocket;
-            proxy_set_header    Connection Upgrade;
+        location /test {
+            return 200 "gateway_test";
         }
-
-        location = /test{
-            return 200 "test1";
+        
+        location / {
+            proxy_pass http://service_messenger:5001;
         }
     }
 }
