--- a/backend/service_messenger/Dockerfile
+++ b/backend/service_messenger/Dockerfile
@@ -1,3 +1,13 @@
 FROM golang:1.22
 
-RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
+# RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
+
+WORKDIR /app
+
+COPY go.mod go.sum ./
+
+RUN go mod download
+
+COPY . .
+
+RUN go build -o main .
