--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -4,13 +4,17 @@ events {
 
 http {
     server {
-        server_name test.offline_project.com;
+        listen 80;
+
+        location / {
+            return 200 "gateway_root";
+        }
 
         location /test {
             return 200 "gateway_test";
         }
         
-        location / {
+        location /messenger {
             proxy_pass http://service_messenger:5001;
         }
     }
