--- a/backend/service_messenger/Dockerfile
+++ b/backend/service_messenger/Dockerfile
@@ -2,12 +2,11 @@ FROM golang:1.22
 
 # RUN go install -v github.com/go-delve/delve/cmd/dlv@v1.22.1
 
+EXPOSE 5001
+
 WORKDIR /app
-
-COPY go.mod go.sum ./
-
-RUN go mod download
-
 COPY . .
-
-RUN go build -o main .
+COPY go.mod ./
+RUN go mod download
+RUN go build -o main ./cmd/messenger
+CMD ["./main"]
