--- a/backend/dummy/Dockerfile
+++ b/backend/dummy/Dockerfile
@@ -5,3 +5,8 @@ EXPOSE 5001
 RUN go install golang.org/x/tools/gopls@latest
 RUN go install honnef.co/go/tools/cmd/staticcheck@latest
 RUN go install github.com/go-delve/delve/cmd/dlv@latest
+
+COPY . .
+
+RUN go build -o main .
+CMD ["./main"]
