--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -14,9 +14,9 @@ http {
             return 200 "gateway_test";
         }
         
-        location /messenger {
-            proxy_pass http://service_messenger:5001;
-        }
+        # location /messenger {
+        #     proxy_pass http://service_messenger:5001;
+        # }
     }
 }
 
