--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 		"../docker-compose.yml",
 		"docker-compose.yml"
 	],
-	"service": "dummy",
+	"service": "service_messenger",
 	"workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
 	"customizations": {
 		"vscode": {
