--- a/backend/gateway/gateway.conf
+++ b/backend/gateway/gateway.conf
@@ -14,9 +14,13 @@ http {
             return 200 "gateway_test";
         }
         
-        # location /messenger {
-        #     proxy_pass http://service_messenger:5001;
-        # }
+        location /messenger/ {
+            proxy_pass http://service_messenger:5001/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
 
